--- a/src/sass/components/About.scss
+++ b/src/sass/components/About.scss
@@ -1,10 +1,7 @@
 .about {
-	//height: 60rem;
-	//width: 100%;
 	padding: 10rem 5rem;
 	margin-top: 7rem;
-	//margin-bottom: -10rem;
-
+	width: 100%;
 	-webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
 	clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
 
@@ -12,6 +9,8 @@
 		display: flex;
 		align-items: center;
 		padding-bottom: 5rem;
+		justify-content: space-evenly;
+		flex-wrap: wrap;
 	}
 
 	&__picture {
@@ -28,7 +27,7 @@
 	&__text {
 		flex: 1;
 		padding: 3rem;
-
+		max-width: 100rem;
 		font-size: 1.6rem;
 	}
 }
