--- a/src/sass/components/Cards.scss
+++ b/src/sass/components/Cards.scss
@@ -163,95 +163,95 @@
 		font-weight: 100;
 	}
 
-	@include media(tab-port) {
-		height: auto;
-		border-radius: 3px;
-		background-color: var(--color-grey-light-1);
-		box-shadow: var(--shadow-light);
+	// @include media(tab-port) {
+	// 	height: auto;
+	// 	border-radius: 3px;
+	// 	background-color: var(--color-grey-light-1);
+	// 	box-shadow: var(--shadow-light);
 
-		&__side {
-			height: auto;
-			font-size: 2rem;
-			position: relative;
-			box-shadow: none;
+	// 	&__side {
+	// 		height: auto;
+	// 		font-size: 2rem;
+	// 		position: relative;
+	// 		box-shadow: none;
 
-			&--back {
-				transform: rotateY(0);
-				-webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-				clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-			}
-		}
+	// 		&--back {
+	// 			transform: rotateY(0);
+	// 			-webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+	// 			clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+	// 		}
+	// 	}
 
-		&:hover &__side--front {
-			transform: rotateY(0);
-		}
+	// 	&:hover &__side--front {
+	// 		transform: rotateY(0);
+	// 	}
 
-		&__details {
-			padding: 1rem 3rem;
-		}
+	// 	&__details {
+	// 		padding: 1rem 3rem;
+	// 	}
 
-		//BACK SIDE STYLING
-		&__cta {
-			position: relative;
-			top: 0%;
-			left: 0%;
-			transform: translate(0);
-			width: 100%;
-			padding: 7em 4rem 4rem 4rem;
-		}
+	// 	//BACK SIDE STYLING
+	// 	&__cta {
+	// 		position: relative;
+	// 		top: 0%;
+	// 		left: 0%;
+	// 		transform: translate(0);
+	// 		width: 100%;
+	// 		padding: 7em 4rem 4rem 4rem;
+	// 	}
 
-		&__price-box {
-			margin-bottom: 2rem;
-		}
+	// 	&__price-box {
+	// 		margin-bottom: 2rem;
+	// 	}
 
-		&__price-value {
-			font-size: 6rem;
-		}
-	}
+	// 	&__price-value {
+	// 		font-size: 6rem;
+	// 	}
+	// }
 
-	@include media(phone) {
-		height: auto;
-		border-radius: 3px;
-		background-color: var(--color-grey-light-1);
-		box-shadow: var(--shadow-light);
+	// @include media(phone) {
+	// 	height: auto;
+	// 	border-radius: 3px;
+	// 	background-color: var(--color-grey-light-1);
+	// 	box-shadow: var(--shadow-light);
 
-		&__side {
-			height: auto;
-			font-size: 2rem;
-			position: relative;
-			box-shadow: none;
+	// 	&__side {
+	// 		height: auto;
+	// 		font-size: 2rem;
+	// 		position: relative;
+	// 		box-shadow: none;
 
-			&--back {
-				transform: rotateY(0);
-				-webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-				clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
-			}
-		}
+	// 		&--back {
+	// 			transform: rotateY(0);
+	// 			-webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+	// 			clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+	// 		}
+	// 	}
 
-		&:hover &__side--front {
-			transform: rotateY(0);
-		}
+	// 	&:hover &__side--front {
+	// 		transform: rotateY(0);
+	// 	}
 
-		&__details {
-			padding: 1rem 3rem;
-		}
+	// 	&__details {
+	// 		padding: 1rem 3rem;
+	// 	}
 
-		//BACK SIDE STYLING
-		&__cta {
-			position: relative;
-			top: 0%;
-			left: 0%;
-			transform: translate(0);
-			width: 100%;
-			padding: 7em 4rem 4rem 4rem;
-		}
+	// 	//BACK SIDE STYLING
+	// 	&__cta {
+	// 		position: relative;
+	// 		top: 0%;
+	// 		left: 0%;
+	// 		transform: translate(0);
+	// 		width: 100%;
+	// 		padding: 7em 4rem 4rem 4rem;
+	// 	}
 
-		&__price-box {
-			margin-bottom: 2rem;
-		}
+	// 	&__price-box {
+	// 		margin-bottom: 2rem;
+	// 	}
 
-		&__price-value {
-			font-size: 6rem;
-		}
-	}
+	// 	&__price-value {
+	// 		font-size: 6rem;
+	// 	}
+	// }
 }
