--- a/src/sass/components/Skills.scss
+++ b/src/sass/components/Skills.scss
@@ -1,6 +1,8 @@
 .skills {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 
 	-webkit-clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
 	clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
@@ -20,7 +22,9 @@
 
 	&__div {
 		display: flex;
-		justify-content: space-between;
+
+		flex-wrap: wrap;
+		width: 100%;
 	}
 
 	&__box {
@@ -31,7 +35,7 @@
 		background-color: var(--color-grey-light-1);
 		font-size: 1.5rem;
 		padding: 2.5rem;
-		margin: 0 2rem;
+		margin: 2rem 2rem;
 		text-align: center;
 		border-radius: 3px;
 		box-shadow: var(--shadow-light);
