--- a/src/sass/layout/Base.scss
+++ b/src/sass/layout/Base.scss
@@ -13,7 +13,8 @@
 html {
 	box-sizing: border-box; //working with border-box
 	font-size: 62.5%; //1rem=10px 10px/16 =62,5%
-	//background-color: var(--light-blue);
+	position: relative;
+	overflow-x: hidden;
 }
 
 body {
@@ -21,10 +22,10 @@ body {
 	font-weight: 400;
 	line-height: 1.6;
 	color: var(--color-grey-dark-2);
-	// background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
-	// background-size: cover;
-	// background-repeat: no-repeat;
-	//background-color: var(--color-grey-light-1);
-
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	overflow-x: hidden;
 	min-height: 100vh;
 }
